# gradient-sdf

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md
cpp/: .gitignore  CMakeLists.txt
cpp/depth_scanning/: CMakeLists.txt
cpp/depth_scanning/src/: main_scan_3d.cpp
cpp/include/: Timer.h  hash_map.h  mat.h
cpp/include/img_loader/: ImageLoader.h  Printed3dLoader.h  RedwoodLoader.h  SynthLoader.h  TumrgbdLoader.h  img_loader.h
cpp/include/mesh/: HrLayeredMarchingCubes.cpp  HrLayeredMarchingCubes.h  LayeredMarchingCubesNoColor.cpp  LayeredMarchingCubesNoColor.h
cpp/include/normals/: NormalEstimator.h
cpp/include/ps_optimizer/: ColorUpsampler.cpp  ColorUpsampler.h  PhotometricOptimizer.cpp  PhotometricOptimizer.h  SharpDetector.h  loss.h
cpp/include/sdf_tracker/: MapGradPixelSdf.cpp  MapGradPixelSdf.h  MapGradPixelSdfOmp.cpp  MapPixelSdf.cpp  MapPixelSdf.h  MapPixelSdfOmp.cpp  RigidOptimizer.h  RigidPointOptimizer.cpp  RigidPointOptimizer.h  RigidPointOptimizerOmp.cpp  Sdf.h
cpp/include/sdf_voxel/: SdfVoxel.h
cpp/photometric_opt/: CMakeLists.txt
cpp/photometric_opt/src/: main_photo_ba.cpp
matlab/: GradientAnalysisSpheres.m  RenderSpheres.m  add_kinect_noise.m  phi_statistics.m  poses.txt
